service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso-fe-service
spec:
  selector:
    app: sso-fe
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 3000
  type: NodePort
