ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sso-ingress
spec:
  rules:
    - host: test-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sso-fe-service
                port:
                  number: 5000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sso-be-service
                port:
                  number: 8000
  # Uncomment this section if you have a TLS certificate for HTTPS
  # tls:
  # - hosts:
  #   - test-domain.com
  #   secretName: tls-secret
